--- a/demo/index.html
+++ b/demo/index.html
@@ -1,80 +1,40 @@
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>Opossum Circuit Breaker Example</title>
+
+  <link rel="stylesheet" href="/bootstrap.min.css">
+  <link rel="stylesheet" href="/app.css">
+</head>
+<body class="demo">
   <script type='text/javascript' src="/jquery.js"></script>
   <script type='text/javascript' src="/opossum.js"></script>
   <script type='text/javascript' src="/app.js"></script>
-  <style>
-    body {
-      font-family: Arial, Helvetica, sans-serif;
-      margin: 1em;
-    }
-    button {
-      padding: 1ex 1em;
-      margin-right: 1em;
-      font-size: larger;
-    }
-    .row {
-      padding: 1em;
-      width: 100%
-    }
-    .right {
-      float:right;
-      width: 50%;
-    }
-    h2 {
-      border-bottom: 1px dotted #999;
-    }
-    .clear {
-      cursor: pointer;
-      color: #3336ff;
-    }
-    .success {
-      color: darkgreen
-    }
-    .open {
-      color: red
-    }
-    .fallback {
-      color: darkblue
-    }
-    .rejected {
-      color: darkorange
-    }
-    .close {
-      color: green
-    }
-    .timeout {
-      color: darksalmon
-    }
-  </style>
-</head>
-<body>
-  <div>
-    <h1>Opossum Circuit Breaker Example</h1>
-
-    <p>
-      When you click the button here, this simple app calls a flakey web service that takes longer and longer to respond. The app's circuit breaker is configured to timeout after 500ms and execute a fallback command. Every 20 seconds, the flakey service is reset and the pattern is repeated.
-    </p>
-    <p>
-      If more than half of the requests error, then it begins to fail fast, rejecting the network call outright and executing the fallback function.
-    </p>
-    <p>
-      The <a href="/app.js">source code</a>.
-    </p>
-    <div class="row">
-      <button type="button" id="flakey">
-        Flakey Service
-      </button>
-    </div>
-    <div class="row right">
-      <h2>Circuit Breaker Statistics</h2>
-      <div id='stats'><p>...</p></div>
+  <script src="/bootstrap.min.js"></script>
+  <div class="container-fluid">
+    <div class="page-header">
+      <h1>Circuit Breaker Example</h1>
+      <div class="row">
+        <div class="col-md-7">
+          <button type="button" id="flakey" class="btn btn-primary btn-lg">
+            Flakey Service
+          </button>
+          <button type="button" class="clear btn btn-lg">Clear</span>
+        </div>
+      </div>
     </div>
     <div class="row">
-      <h2>Flakey Responses</h2>
-      <span class="clear">Click to clear</span>
-      <div id="flakeyResponse"></div>
+      <div class="col-md-8">
+        <h2>Flakey Responses</h2>
+        <div id="flakeyResponse" class="row"></div>
+      </div>
+      <div class="col-md-4">
+        <h2>Circuit Statistics</h2>
+        <div id='stats'><p>...</p></div>
+      </div>
     </div>
   </div>
 </body>
